--- a/lib/js/plug/popimg_vue/popimg.html
+++ b/lib/js/plug/popimg_vue/popimg.html
@@ -1,5 +1,3 @@
-
 <div id="popimg" class="popimg">
-    <span v-bind:title="message">
-    </span>
+    <div class="preview-photo" href="http://fengyun-bar.b0.upaiyun.com/1470742916289691.jpg">ASDFA</div>
 </div>
