--- a/test/popimg_tpl.html
+++ b/test/popimg_tpl.html
@@ -9,7 +9,8 @@ and open the template in the editor.
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script type="text/javascript" src="/dist/popimg.all.css"></script>
+        <script type="text/javascript" src="/dist/js/popimg.test.js"></script>
+        <link rel="stylesheet" href="/dist/js/popimg.all.css"/>
     </head>
     <body>
         <div>TODO write content</div>
