--- a/test/popimg_vue.html
+++ b/test/popimg_vue.html
@@ -9,7 +9,7 @@ and open the template in the editor.
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../dist/css/popimg.all.css">
+        <link rel="stylesheet" href="/dist/css/popimg.all.css">
         <script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/1.8.3/jquery.js"></script>
         <script type="text/javascript" src="../lib/js/vue/vue.js"></script>
         <script type="text/javascript" src="../dist/popimg.all.js"></script>
