--- a/test/index-vue.html
+++ b/test/index-vue.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Vue VS jQuery</title>
-    <script type="text/javascript" src="./vue.js"></script>
+	<script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/1.8.3/jquery.js"></script>
     <style type="text/css">
     	body{ margin: 0; padding: 0; }
     	#app{ width: 250px; margin: 20px auto; }
