--- a/test/popimg_tpl.html
+++ b/test/popimg_tpl.html
@@ -9,10 +9,11 @@ and open the template in the editor.
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script type="text/javascript" src="/dist/js/popimg.test.js"></script>
-        <link rel="stylesheet" href="/dist/js/popimg.all.css"/>
+        <link rel="stylesheet" href="../dist/css/popimg.all.css"/>
     </head>
     <body>
+        <script type="text/javascript" src="http://static.ws.kukuplay.com/common/lib/jquery/v1.9.2/jquery-1.9.2.js"></script>
+        <script type="text/javascript" src="../dist/popimg.all.js"></script>
         <div>TODO write content</div>
     </body>
 </html>
