--- a/test/popimg_tpl.html
+++ b/test/popimg_tpl.html
@@ -15,5 +15,12 @@ and open the template in the editor.
         <script type="text/javascript" src="http://static.ws.kukuplay.com/common/lib/jquery/v1.9.2/jquery-1.9.2.js"></script>
         <script type="text/javascript" src="../dist/popimg.all.js"></script>
         <div>TODO write content</div>
+        <div class="preview-photo" data-href="http://fengyun-bar.b0.upaiyun.com/1470742916289691.jpg">click to view img</div>
+
+        <script type="text/javascript">
+            $(function(){
+                popimg.showImage();
+            });
+        </script>
     </body>
 </html>
