add array support

--- a/test/popimg_tpl.html
+++ b/test/popimg_tpl.html
@@ -19,7 +19,13 @@ and open the template in the editor.
 
         <script type="text/javascript">
             $(function(){
-                popimg.showImage();
+                popimg.showImage([{
+                    src:'http://fengyun-bar.b0.upaiyun.com/1470742916289691.jpg',
+                    info: 'test object'
+                },{
+                    src: 'http://fengyun-bar.b0.upaiyun.com/1458206426851701.png',
+                    info: 'asdfasdfasdf'
+                }]);
             });
         </script>
     </body>
